fix alignment of elements within project links

--- a/styles/main.css
+++ b/styles/main.css
@@ -336,6 +336,9 @@ nav {
   border: solid #00ffc1 3px;
   padding: 0.5em;
   font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .project-links:hover {
   background-color: #00ffc1;
